# sm75-global-shared-staging

./: .gitignore  CMakeLists.txt  README.md
scripts/: plot.py  roofline.py  roofline_refined.py
src/: main.cu
